[metadata]
name = neutron-policy-server
summary = Advanced policy server for Neutron
description_file =
    README.rst
author = VEXXHOST, Inc.
author_email = support@vexxhost.com
url = https://vexxhost.github.io/neutron-policy-server/
project_urls =
    Bug Tracker = https://github.com/vexxhost/neutron-policy-server/issues
    Documentation = https://vexxhost.github.io/neutron-policy-server/
    Source Code = https://github.com/vexxhost/neutron-policy-server
python_requires = >=3.8
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    neutron_policy_server

[entry_points]
wsgi_scripts =
    neutron-policy-server-wsgi = neutron_policy_server.wsgi:create_app
